...
    }
    private var navTitle: String {
        switch currentView {
        case .list:
            return "All Horses"  // Empty title when showing the list
        case .addHorse:
            return "Add Horse"
        case .horseInfo:
            return "Horse Details"  // Priority is given to Name of horse as Title, but this is a fallback title. No idea when/if we will need fallback, but for now just to be safe
        case .editHorse:
            return "Edit Horse"
        }

...
    let modelContext = container.mainContext
    let assessment = Assessment(
        vetName: "Dr. Smith", farmName: "Green Acres", visitDate: Date())

    // Add sample horses
    let horse1 = Horse(
        name: "Thunder",
        age: 5,
        color: "Bay",
        sex: "Gelding",
        breed: "Quarter Horse",
        timeOnFarm: 12,
        bcsScore: 3.5,
...
